@@ -753,6 +753,9 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11493. Fix some typos in kms-acls.xml description.
     (Charles Lamb via aajisaka)
 
+    HADOOP-11507 Hadoop RPC Authentication problem with different user locale.
+    (Talat UYARER via stevel)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
